# Unity-IDE

./: .gitignore  AUTO-DISCOVERY.md  BUILD-GUIDE.md  CHANGELOG-VSCODE-UI.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  DEMARRAGE-RAPIDE.md  FINAL-RELEASE.md  FINAL-SUMMARY.md  INSTALL.md  INSTALLATION.md  INTEGRATION-GUIDE.md  LICENSE  LOGO-SETUP.md  Makefile  PROGRESS-REPORT.md  QUICKSTART.md  README-INSTALL.md  README.md  ROADMAP.md  SESSION-COMPLETED.md  SESSION-SUMMARY-V1.0.0.md  SESSION-SUMMARY.md  STATUS-REPORT.md  SUMMARY.md  UTILISATION.md  V1.0.0-FEATURES.md  V1.0.0-RELEASE-PLAN.md  V1.1.0-RELEASE.md  VSCODE-ARCHITECTURE.md  build-macos.sh  build-production.sh  build.sh  debug_backend.sh  demo-k9s-comparison.sh  dev.sh  install-app.sh  install.sh  package-lock.json  start-app.sh  (+7 more)
backend/: ansible_manager.go  go.mod  local-server.go  proxy_manager.go
backend/handlers/: docker_test.go  kubernetes_test.go
docs/: EXTENSION-SDK.md
extensions/: README.md
extensions/sdk/: extension-api.ts  package.json
frontend/: .env.demo  .eslintrc.json  README-DEMO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: config.json  start_backend.sh
frontend/scripts/: build_installers.sh
frontend/src-tauri/: Cargo.toml  inject.js  tauri.conf.json
frontend/src-tauri/icons/: README.md  create_professional_icons.sh  icon.icns
frontend/src-tauri/src/: ansible.rs  backend_manager.rs  docker.rs  extensions.rs  kubernetes.rs  main.rs  monitoring.rs  utils.rs
scripts/: generate-favicons.sh  install.sh  setup.sh
(+119 files in other folders)
