[package]
name = "devops-unity-ide"
version = "1.0.0"
description = "DevOps Unity IDE - The unified platform for modern infrastructure"
authors = ["DevOps Unity Team"]
license = "MIT"
repository = "https://github.com/devops-unity/ide"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-relaunch", "process-exit",
  "fs-all",
  "path-all",
  "protocol-all",
  "shell-all",
  "window-all",
  "os-all",
  "http-all",
  "notification-all",
  "dialog-all",
  "clipboard-all",
  "system-tray"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bollard = "0.15"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["runtime", "derive", "client", "ws"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"
dirs = "5.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
